fixed styles and added closeModalHandler on overflow click

--- a/components/company-list-item/CompanyListItem.module.css
+++ b/components/company-list-item/CompanyListItem.module.css
@@ -16,6 +16,7 @@
   filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.1));
 }
 
+
 .logo {
   width: 100%;
   height: 100%;
@@ -28,6 +29,9 @@
   font: normal 600 21px/26px var(--fontFamily);
   text-transform: uppercase;
   margin: 28px 0 8px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 .details {
   text-overflow: ellipsis;
