--- a/components/layout/Layout.module.css
+++ b/components/layout/Layout.module.css
@@ -1,8 +1,8 @@
 .container {
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
+  margin: 0;
   max-width: 1324px;
-  padding: 0 var(--majorOffset);
+  padding: 0;
   box-sizing: content-box;
 }
