--- a/components/main/Main.module.css
+++ b/components/main/Main.module.css
@@ -4,6 +4,13 @@
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
+  gap: 20
+}
+
+.container::after {
+  content: "";
+  max-width: 400px;
+  width: 100%
 }
 
 @media (max-width: 720px) {
